Codigo do jogo da memoria completado

--- a/jogo-da-memoria.html
+++ b/jogo-da-memoria.html
@@ -3,9 +3,9 @@
     <head>
         <title>Memory Game Using Polygons</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="jogo-da-memoria.css">
+        <link rel="stylesheet" href="jogo-da-memoria.css">        
     </head>
-    <body>
+    <body onload="init();">
         <canvas id="canvas" width="900" height="400">
             Your browser doesn't support HTML element canvas.
         </canvas>
