Jogo da memoria finalizado

--- a/jogo-da-memoria.html
+++ b/jogo-da-memoria.html
@@ -17,6 +17,9 @@
             <br>
             Time taken to complete puzzle: 
             <input type="text" name="elapsed" value="" size="4">
+            <br><br>
+            <button id="btn-restart">Restart</button>
+            
         </form>
 
         <script src="jogo-da-memoria.js"></script>
